--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,30 +23,25 @@ const { title } = Astro.props;
 <style is:global>
 	:root {
 		--background: #ECF1F5;
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
+		--accent: 14, 33, 40;
+		--primary-text: #000000;
+		--borders: #565E6D;
 	}
 	html {
 		font-family: system-ui, sans-serif;
+		font-size: 62.5%;
 		background: var(--background);
-		background-size: 224px;
+		height: 100%;
 	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
+	* {
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
+		scroll-behavior: smooth;
+	}
+	h2{
+		color: var(--primary-text);
+		font-size: 4.9rem;
+		font-weight: 800;
 	}
 </style>
