--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,4 +44,10 @@ const { title } = Astro.props;
 		font-size: 4.9rem;
 		font-weight: 800;
 	}
+	input:-webkit-autofill,
+	input:-webkit-autofill:hover, 
+	input:-webkit-autofill:focus, 
+	input:-webkit-autofill:active  {
+		-webkit-box-shadow: 0 0 0 30px white inset !important;
+	}
 </style>
