--- a/src/components/Inputs.components.astro
+++ b/src/components/Inputs.components.astro
@@ -1,20 +1,27 @@
 ---
 import { Icon } from 'astro-icon/components'
 
+type InputType = 'text' | 'password' | 'email' | 'number';
+
+type IconsType = 'user' | 'lock' | 'mail' | 'phone'
+
 interface Props {
     label: string;
     placeholder: string;
+    type: InputType | undefined;
     name: string;
+    icon: IconsType;
 }
 
-const { label, placeholder, name } = Astro.props;
+const { label, placeholder, type, name, icon } = Astro.props;
 ---
 
 <div class="input-container">
     <label for={name}>{label}</label>
     <div class="input-wrapper">
-        <span><Icon name='user'/></span>
-        <input name={name} placeholder={placeholder} required />
+        <span><Icon name={icon}/></span>
+        <input type={type} name={name} placeholder={placeholder} required />
+        {type == 'password' ? <span class="show-password"><Icon name="eye"/></span> : ''}
     </div>
 </div>
 
@@ -57,12 +64,20 @@ const { label, placeholder, name } = Astro.props;
             input:focus {
                 outline: none;
             }
+            input::-webkit-outer-spin-button,
+            input::-webkit-inner-spin-button {
+                -webkit-appearance: none;
+                margin: 0;
+            }
             input{
                 width: 100%;
                 height: 100%;
                 border: none;
                 font-size: 1.4rem;
             }
+        }
+        .show-password{
+            cursor: pointer;
         }
     }
 </style>
