--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
@@ -8,46 +8,60 @@ const { title } = Astro.props;
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body>
+    <slot />
+  </body>
 </html>
 <style is:global>
-	:root {
-		--background: #ECF1F5;
-		--accent: 14, 33, 40;
-		--primary-text: #000000;
-		--borders: #565E6D;
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		font-size: 62.5%;
-		background: var(--background);
-		height: 100%;
-	}
-	* {
-		margin: 0;
-		padding: 0;
-		box-sizing: border-box;
-		scroll-behavior: smooth;
-	}
-	h2{
-		color: var(--primary-text);
-		font-size: 4.9rem;
-		font-weight: 800;
-	}
-	input:-webkit-autofill,
-	input:-webkit-autofill:hover, 
-	input:-webkit-autofill:focus, 
-	input:-webkit-autofill:active  {
-		-webkit-box-shadow: 0 0 0 30px white inset !important;
-	}
+  :root {
+    --background: #ecf1f5;
+    --secondary-background: #ffffff;
+    --accent: 14, 33, 40;
+    --primary-text: #0e2128;
+    --secondary-text: #171a1f;
+    --dividers: #aab1be;
+    --borders: #565e6d;
+  }
+  html {
+    font-family: system-ui, sans-serif;
+    font-size: 62.5%;
+    background: var(--background);
+    height: 100%;
+  }
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+  }
+  h2 {
+    color: var(--primary-text);
+    font-size: 4.9rem;
+    font-weight: 800;
+  }
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  input:-webkit-autofill:active {
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
+  }
+  input:focus {
+    outline: none;
+  }
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+  a {
+    text-decoration: none;
+  }
 </style>
