--- a/src/pages/auth/register.astro
+++ b/src/pages/auth/register.astro
@@ -1,6 +1,23 @@
 ---
 import Layout from "../../layouts/Layout.astro";
-import Inputs from "../../components/Inputs.components.astro";
+import Inputs from "../../components/Inputs.component.astro";
+import Button from "../../components/CtaButton.component.astro";
+
+if (Astro.request.method === "POST") {
+  try {
+    const data = await Astro.request.formData();
+    const full_name = data.get("full_name");
+    const username = data.get("username");
+    const email = data.get("email");
+    const phone_number = data.get("phone_number");
+    const password = data.get("password");
+    console.log(full_name, username, email, phone_number, password);
+  } catch (error) {
+    if (error instanceof Error) {
+      console.error(error.message);
+    }
+  }
+}
 ---
 
 <Layout title="Register">
@@ -9,17 +26,52 @@ import Inputs from "../../components/Inputs.components.astro";
     <div>
       <div class="register-form">
         <h2>Registrate</h2>
-        <form action="/register" method="post">
-        <Inputs type="text" label="Nombre Completo" placeholder="Nombre Completo" name="full_name" icon="user"/>
-        <Inputs type="text" label="Nombre de Usuario" placeholder="Nombre de Usuario" name="username" icon="user"/>
-        <Inputs type="email" label="Correo Electronico" placeholder="Correo Electronico" name="email" icon="mail"/>
-        <Inputs type="number" label="Numero de Telefono" placeholder="Numero de Telefono" name="phone_number" icon="phone"/>
-        <Inputs type="password" label="Contraseña" placeholder="Contraseña" name="password" icon="lock"/>
-        <button type="submit">Registrar</button>
+        <form method="post">
+          <Inputs
+            type="text"
+            label="Nombre Completo"
+            placeholder="Nombre Completo"
+            name="full_name"
+            icon="user"
+            pattern="^[a-zA-Z]+ [a-zA-Z]+.*$"
+            title="Por favor ingresa tu nombre y apellido."
+          />
+          <Inputs
+            type="text"
+            label="Nombre de Usuario"
+            placeholder="Nombre de Usuario"
+            name="username"
+            icon="user"
+            minlength="3"
+          />
+          <Inputs
+            type="email"
+            label="Correo Electronico"
+            placeholder="Correo Electronico"
+            name="email"
+            icon="mail"
+          />
+          <Inputs
+            type="number"
+            label="Numero de Telefono"
+            placeholder="Numero de Telefono"
+            name="phone_number"
+            icon="phone"
+          />
+          <Inputs
+            type="password"
+            label="Contraseña"
+            placeholder="Contraseña"
+            name="password"
+            icon="lock"
+            minlength="8"
+            maxlength="64"
+          />
+          <Button type="submit">Registrar</Button>
         </form>
-        <div>
+        <div class="login-link">
           <p>¿Ya tienes una cuenta?</p>
-          <a href="/login">Iniciar Sesion</a>
+          <a href="/auth/login">Iniciar Sesion</a>
         </div>
       </div>
     </div>
@@ -27,39 +79,58 @@ import Inputs from "../../components/Inputs.components.astro";
 </Layout>
 
 <style>
-    main{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        width: 100%;
+  main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+  }
+  div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+  }
+  .register-form {
+    border-color: var(--borders);
+    background-color: #ecf1f5;
+    filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.25));
+    border-radius: 2.4rem;
+    padding: 3.1rem 1.6rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.6rem;
+    width: 60rem;
+    padding: 2.4rem 4.8rem;
+
+    form {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      gap: 1.6rem;
     }
-    div{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 50%;
+
+    .login-link {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      gap: 0.8rem;
+
+      p {
+        color: var(--secondary-text);
+        font-size: 1.4rem;
+        font-weight: 500;
+      }
+      a {
+        color: var(--primary-text);
+        font-size: 1.4rem;
+        font-weight: 700;
+      }
     }
-    .register-form {
-        border-color: var(--borders);
-        background-color:#ecf1f5;
-        filter:drop-shadow(0px 0px 2px rgba(0,0,0,0.25));
-        border-radius: 2.4rem;
-        padding: 3.1rem 1.6rem;
-        display:flex;
-        flex-direction:column;
-        gap: 1.6rem;
-        width: 60rem;
-        padding: 2.4rem 4.8rem;
-        
-        form{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            gap: 1.6rem;
-        }
-    }
+  }
 </style>
