--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,6 +29,7 @@ const { title } = Astro.props;
     --secondary-text: #171a1f;
     --dividers: #aab1be;
     --borders: #565e6d;
+    --error: 255, 2, 2;
   }
   html {
     font-family: system-ui, sans-serif;
