--- a/src/pages/auth/login.astro
+++ b/src/pages/auth/login.astro
@@ -3,61 +3,43 @@ import Layout from "../../layouts/Layout.astro";
 import Input from "../../components/Input.component.astro";
 import Button from "../../components/CtaButton.component.astro";
 import PasswordInput from "./components/PasswordInput";
-import { customAxios } from "../../middlewares/axios.instance";
-import { Icon } from "astro-icon/components";
-
-export const prerender = false;
-
-const message_error = Astro.url.searchParams.get("message_error");
-
-if (Astro.request.method === "POST") {
-  try {
-    const data = await Astro.request.formData();
-    const full_name = data.get("full_name");
-    const username = data.get("username");
-    const email = data.get("email");
-    const phone_number = data.get("phone_number");
-    const password = data.get("password");
-    await customAxios.post("/auth/login", {
-      full_name,
-      username,
-      email,
-      phone_number,
-      password,
-    });
-    return Astro.redirect("/auth/login");
-  } catch (error) {
-    if (error) {
-      return Astro.redirect(`/auth/login?message_error=${error}`);
-    }
-  }
-}
 ---
 
 <Layout title="Login">
+  <script>
+    const { signIn } = await import("auth-astro/client");
+    document.addEventListener("DOMContentLoaded", () => {
+      const form = document.querySelector("form");
+      if (form) {
+        form.addEventListener("submit", async (event) => {
+          event.preventDefault();
+          const formData = new FormData(event.target as HTMLFormElement);
+          const email = formData.get("email");
+          const password = formData.get("password");
+          const repeat_password = formData.get("repeat_password");
+          if (password !== repeat_password) {
+            alert(
+              "Las contraseñas no coinciden. Por favor, verifica e intenta de nuevo."
+            );
+            return;
+          }
+          const res = await signIn("credentials", {
+            email: email,
+            password: password,
+            redirect: false,
+          });
+          console.log(res);
+        });
+      }
+    });
+  </script>
+
   <main>
     <div>Image</div>
     <div>
       <div class="login-form">
-        <h2>Registrate</h2>
+        <h2>Inicia Sesión</h2>
         <form method="post">
-          <Input
-            type="text"
-            label="Nombre Completo"
-            placeholder="Nombre Completo"
-            name="full_name"
-            icon="user"
-            pattern="^[a-zA-Z]+ [a-zA-Z]+.*$"
-            title="Por favor ingresa tu nombre y apellido."
-          />
-          <Input
-            type="text"
-            label="Nombre de Usuario"
-            placeholder="Nombre de Usuario"
-            name="username"
-            icon="user"
-            minlength="3"
-          />
           <Input
             type="email"
             label="Correo Electronico"
@@ -65,31 +47,30 @@ if (Astro.request.method === "POST") {
             name="email"
             icon="mail"
           />
-          <Input
-            type="number"
-            label="Numero de Telefono"
-            placeholder="Numero de Telefono"
-            name="phone_number"
-            icon="phone"
-          />
           <PasswordInput
             label="Contraseña"
-            placeholder="Crea una Contraseña"
+            placeholder="Ingresa tu Contraseña"
             client:visible
           />
-          <Button type="submit">Registrar</Button>
-          <div
+          <PasswordInput
+            name="repeat_password"
+            label="Repetir Contraseña"
+            placeholder="Verifica tu Contraseña"
+            client:visible
+          />
+          <Button type="submit">Iniciar sesión</Button>
+          <!-- <div
             class=`error-container ${message_error ? 'error-on' : 'error-off'}`
           >
             <div class="warning-icon-container">
               <Icon class="warning-icon" name="warning" />
             </div>
             {message_error && <p>{message_error}</p>}
-          </div>
+          </div> -->
         </form>
         <div class="login-link">
-          <p>¿Ya tienes una cuenta?</p>
-          <a href="/auth/login">Iniciar Sesion</a>
+          <p>¿Aún no tienes cuenta?</p>
+          <a href="/auth/register">Registrarse</a>
         </div>
       </div>
     </div>
