--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import { ViewTransitions } from "astro:transitions";
+import NavBar from "@components/NavBar.astro";
 
 interface Props {
   title: string;
@@ -20,6 +21,7 @@ const { title } = Astro.props;
     <ViewTransitions />
   </head>
   <body>
+    <NavBar />
     <slot />
     <style is:global>
       :root {
@@ -37,6 +39,15 @@ const { title } = Astro.props;
         font-size: 62.5%;
         background: var(--background);
         height: 100%;
+      }
+      body {
+        background-color: var(--background);
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+      }
+      ::-webkit-scrollbar {
+        display: none;
       }
       * {
         margin: 0;
@@ -65,6 +76,11 @@ const { title } = Astro.props;
       }
       a {
         text-decoration: none;
+      }
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
       }
     </style>
   </body>
